[package]
name = "micro-cpap-ctl"
version = "0.1.2"
edition = "2021"
description = "Open-source CLI tool for monitoring and configuring Micro CPAP devices over serial"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
chrono = "0.4"
anyhow = "1"
ctrlc = "3"
glob = "0.3"
