[package]
name = "micro-cpap-ctl"
version = "0.3.0"
edition = "2021"
description = "Open-source CLI tool for monitoring and configuring Micro CPAP devices over serial"
license = "MIT"

[[bin]]
name = "cpap"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
serialport = "=4.9.0"
chrono = "=0.4.44"
anyhow = "=1.0.102"
ctrlc = "=3.5.2"
